# loki-bootstrap

./: .gitignore  BASH3-COMPAT-TASKLIST.md  BOOTSTRAP-DISK-SPACE-STRAT.md  BOOTSTRAP-GITHUBACTION-CODE-REVIEW.md  BOOTSTRAP-HEARTBEAT.md  BOOTSTRAP-MEMORY-LOGGING.md  BOOTSTRAP-OUTLINE-SYNC.md  BOOTSTRAP-PIPELINE-NOTIFICATIONS.md  BOOTSTRAP-SECRETS-AWS.md  BOOTSTRAP-SECRETS-MANAGEMENT.md  BOOTSTRAP-TELEGRAM-FORMATTING.md  BOOTSTRAP-TELEGRAM.md  FINAL-REVIEW.md  OPTIMIZE-TOO-LARGE-CONTEXT.md  POST-FIX-REVIEW.md  README.md  REVIEW.md  e2e-test-plan.md  fixed-issues-review-log.md  install.sh  uninstall.sh
deploy/: README.md  bootstrap.sh  openclaw-bootstrap.sh  sam-template.yaml  test-bootstrap.sh  test-templates.sh  test-wizard.sh  wizard.sh
docs/: README.md  design-account-rename.md  docs.json  index.mdx
lib/: telemetry.sh
tools/loki-installer/: Cargo.toml
tools/loki-installer/src/: main.rs
tools/loki-installer/src/adapters/: cfn.rs  mod.rs  support.rs  terraform.rs
tools/loki-installer/src/cli/: args.rs  mod.rs
tools/loki-installer/src/cli/commands/: doctor.rs  install.rs  mod.rs  plan.rs  resume.rs  status.rs  uninstall.rs
tools/loki-installer/src/core/: contract.rs  doctor.rs  manifests.rs  mod.rs  planner.rs  repo.rs  session.rs
tools/loki-installer/src/tui/: app.rs  events.rs  mod.rs  runtime.rs  update.rs
tools/loki-installer/src/tui/screens/: deploy.rs  method_select.rs  mod.rs  pack_select.rs  post_install.rs  preflight.rs  profile_select.rs  review.rs  welcome.rs
tools/loki-installer/tests/: cli_test.rs  planner_test.rs  session_test.rs
(+100 files in other folders)
