[package]
name = "loki-installer"
version = "0.2.0-rc11"
edition = "2024"
description = "Rust implementation of the Loki Installer V2 CLI, planner, TUI, and session runtime"
license = "Apache-2.0"
repository = "https://github.com/inceptionstack/loki-agent"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
color-eyre = "0.6"
futures = "0.3"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
